# simple_videocapture

./: CMakeLists.txt  main.cpp
